--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,17 +1,40 @@
 version: '3.3'
-services:
 
+volumes:
+  pg_data:
+  static:
+  
+services:
+  db:
+    image: postgres:13.10
+    env_file: .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+  backend:
+    build: ../backend/foodgram/
+    env_file: .env
+    depends_on:
+      - db
+    volumes:
+      - static:/backend_static/
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/frontend_static
+    depends_on:
+      - db
+      - backend
   nginx:
-    image: nginx:1.19.3
+    build:
+      context: ../infra/
+      dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8000:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - static:/staticfiles/
+    depends_on:
+      - backend
+      - frontend
