--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -10,6 +10,11 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
+  
+  location /media/ { 
+    alias /app/media/;
+    client_max_body_size 20M; 
+  }
 
   location / {
     alias /staticfiles/;
