--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -11,13 +11,15 @@ server {
     proxy_pass http://backend:8000/admin/;
   }
   
-  location /media/ { 
+  location /media/ {
+    proxy_set_header Host $http_host; 
     alias /app/media/;
     client_max_body_size 20M; 
   }
 
   location / {
+    proxy_set_header Host $http_host; 
     alias /staticfiles/;
-    index index.html;
+    try_files $uri $uri/ /index.html;
   }
 } 
