--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,6 +9,9 @@ server {
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
   
   location /media/ {
@@ -21,5 +24,8 @@ server {
     proxy_set_header Host $http_host; 
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 } 
